# PluginModule

./: CMakeLists.txt  README.md
CMakeModules/: FindLibrary.cmake
PluginModule/: CMakeLists.txt
PluginModule/include/: IPlugin.h  IPluginModule.h  PluginModule.h  PublicMarco.h
PluginModule/src/: PluginModule.cpp  main.cpp
UnitTest/: CMakeLists.txt
UnitTest/include/: UnitCMake_Project.h  XUnitTestBase.h
UnitTest/src/: UnitCMake_Project.cpp  XUnitTestBase.cpp  main.cpp
